--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import "../styles/global.css";
+import Header from "../components/reactComponents/Header"
+import Footer from "../components/reactComponents/Footer"
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +11,12 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>CascadeFund</title>
 	</head>
-	<body>
+	<body class="min-h-screen bg-gray-50">
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
