--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import HeroSection from '../components/reactComponents/HeroSection';
+import AboutSection from '../components/reactComponents/AboutSection';
+import ProcessSteps from '../components/reactComponents/ProcessSteps';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<HeroSection />
+      <AboutSection />
+      <ProcessSteps />
 </Layout>
