Add project addition

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,9 @@ import HeroSection from '../components/reactComponents/HeroSection';
 import AboutSection from '../components/reactComponents/AboutSection';
 import ProcessSteps from '../components/reactComponents/ProcessSteps';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout darkHeader={true}>
 	<HeroSection />
       <AboutSection />
       <ProcessSteps />
