--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,30 +1,18 @@
 ---
-import "../styles/global.css";
 import Header from "../components/reactComponents/Header"
 import Footer from "../components/reactComponents/Footer"
+import BaseLayout from "./BaseLayout.astro"
+
+interface Props {
+	darkHeader: boolean;
+}
+
+const {darkHeader} = Astro.props;
+
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>CascadeFund</title>
-	</head>
-	<body class="min-h-screen bg-gray-50">
-		<Header />
-		<slot />
-		<Footer />
-	</body>
-</html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+<BaseLayout>
+	<Header darkMode={darkHeader} />
+	<slot />
+	<Footer />
+</BaseLayout>
