--- a/src/pages/v2/issue/post.astro
+++ b/src/pages/v2/issue/post.astro
@@ -1,19 +1,16 @@
 ---
 import "../../../styles/v2/4.1_post_issue.css";
-import V2Layout from "../../../layouts/V2Layout.astro";
-import Header from '../../../components/utilitified_decorations/Header'
-import Footer from '../../../components/utilitified_decorations/Footer'
-import NavigatingSubtitledElement from '../../../components/utilitified_decorations/NavigatingSubtitledElement'
-import NavigatingElement from '../../../components/utilitified_decorations/NavigatingElement'
-import BackButton from '../../../components/utilitified_decorations/BackButton'
+import V2Layout from "@/layouts/PanelViewLayout.astro";
+import NavigatingSubtitledElement from '@/components/utilitified_decorations/NavigatingSubtitledElement'
+import NavigatingElement from '@/components/utilitified_decorations/NavigatingElement'
+import BackButton from "@/components/utilitified_decorations/BackButton";
 
-import IssueCard from '../../../components/v2/4.1_post_issue/IssueCard'
-import VotingSection from '../../../components/v2/4.1_post_issue/VotingSection'
-import ChatSection from '../../../components/v2/4.1_post_issue/ChatSection'
-import IssueDetails from '../../../components/v2/4.1_post_issue/IssueDetails'
+import IssueCard from '@/components/v2/issue/UpdatableIssueContentPanel'
+import VotingSection from '@/components/v2/issue/IssuePrioritificationPanel'
+import ChatPanel from '@/components/chat/ExampleContainer'
+import IssueDetails from '@/components/v2/issue/UpdatableIssueDetailsPanel'
 
-import NotificationBanner from '../../../components/v2/4.1_post_issue/NotificationBanner'
-import LinkBtn from "../../../components/v2/LinkBtn";
+import NotificationBanner from '@/components/v2/NotificationBanner'
 
 const additional = [
   await NavigatingElement({href: "/v2/maintainer/work", children: "Cascading Work"}),
@@ -22,35 +19,24 @@ const additional = [
 ].reverse();
 ---
 
-<V2Layout>
-  <Header 
-        landingPageTopMenu={false}  
-        cascadeLogoSubtitle="Data Section: Issue"
-        additional={additional}  
-  />
-  <main class="max-w-7xl mx-auto mt-6 px-4 sm:px-6 lg:px-8 grid grid-cols-1 lg:grid-cols-4">
-      <div class='col-span-1 py-6 space-y-6 mr-6'><BackButton /></div>
-      
-      <div class="mx-6 lg:col-span-2 space-y-6">
-        <NotificationBanner 
-            type="warning"
-            title="Adding a new issue"
-            message="You are adding new"
-        />
+<V2Layout additional={additional}>
+  <BackButton slot="left" href="/v2/issue"></BackButton>
+  <NotificationBanner
+    slot="center"
+    type="warning"
+    title="Adding a new issue"
+  >You are adding new</NotificationBanner>
 
-        <IssueCard />
-        <VotingSection />
-        <div class="flex justify-center mt-8">
-          <LinkBtn variant="blue" href="/v2/issue/post" label="Add Issue" />
-        </div>
-        <p class="text-center text-sm text-gray-500 -mt-2 mb-8">
-            Issue will be automatically followed by you.
-        </p>
-      </div>
-      <div class="lg:col-span-1 space-y-6">
-        <IssueDetails />
-        <ChatSection />
-      </div>
-  </main>
-  <Footer />
+  <IssueCard slot="center" panelTitle="Add a new Issue" actions={[{
+    variant: "blue",
+    label: "Next",
+    href: '/v2/issue'
+  }]} />
+  <VotingSection slot="center" />
+  <IssueDetails slot="right" />
+  <ChatPanel slot="right" client:visible />
 </V2Layout>
+
+<style is:global>
+  @import '@chatscope/chat-ui-kit-styles/dist/default/styles.min.css';
+</style>
