--- a/src/pages/v2/meta/contributor.astro
+++ b/src/pages/v2/meta/contributor.astro
@@ -1,9 +1,5 @@
 ---
-import "../../../styles/v2/1.header.1_contributor.css";
-import V2Layout from "../../../layouts/V2Layout.astro";
-
-import Header from '../../../components/utilitified_decorations/Header'
-import Footer from '../../../components/utilitified_decorations/Footer'
+import V2Layout from "../../../layouts/LandingLayout.astro";
 
 import HeroSection from '../../../components/v2/1.header.1_contributor/HeroSection'
 import ChallengesSection from '../../../components/v2/1.header.1_contributor/ChallengesSection'
@@ -13,14 +9,10 @@ import StatsSection from '../../../components/v2/1.header.1_contributor/StatsSec
 import { NavigationName } from "../../../components/utilitified_decorations/HeaderRight";
 
 ---
-<V2Layout>
-    <div class="min-h-screen bg-white">
-      <Header landingPageTopMenu={true} activeLink={NavigationName.ContributorLanding} cascadeLogoSubtitle="For open source contributors" />
+<V2Layout landingPageTopMenu={true} activeLink={NavigationName.ContributorLanding} cascadeLogoSubtitle="For open source contributors">
       <HeroSection />
       <ChallengesSection />
       <HowItWorksSection />
       <DevelopmentSection />
       <StatsSection />
-      <Footer />
-    </div>
 </V2Layout>
