--- a/src/pages/v2/meta/work.astro
+++ b/src/pages/v2/meta/work.astro
@@ -1,8 +1,5 @@
 ---
-import "../../../styles/v2/1.header.3_work.css";
-import V2Layout from "../../../layouts/V2Layout.astro";
-import Header from '../../../components/utilitified_decorations/Header'
-import Footer from '../../../components/utilitified_decorations/Footer'
+import V2Layout from "../../../layouts/LandingLayout.astro";
 import { NavigationName } from "../../../components/utilitified_decorations/HeaderRight";
 
 import HeroSection from '../../../components/v2/1.header.3_work/HeroSection'
@@ -14,10 +11,7 @@ import VideoSection from '../../../components/v2/1.header.3_work/VideoSection'
 import CTASection from '../../../components/v2/1.header.3_work/CTASection'
 ---
 
-<V2Layout>
-  <div class="min-h-screen bg-white">
-      <Header landingPageTopMenu={true} activeLink={NavigationName.HowItWork} cascadeLogoSubtitle="How does CascadeFund work?" />
-      <main>
+<V2Layout landingPageTopMenu={true} activeLink={NavigationName.HowItWork} cascadeLogoSubtitle="How does CascadeFund work?">
         <HeroSection />
         <CastSection />
         <StorySection />
@@ -25,7 +19,4 @@ import CTASection from '../../../components/v2/1.header.3_work/CTASection'
         <RatingsSection />
         <VideoSection />
         <CTASection />
-      </main>
-      <Footer />
-    </div>
 </V2Layout>
