--- a/src/components/issue/IssuePrioritificationPanel.astro
+++ b/src/components/issue/IssuePrioritificationPanel.astro
@@ -1,6 +1,6 @@
 ---
 import Card from '@/components/utilitified_decorations/PagelikeCard'
-import Horizontally from '@/components/grid/HorizontalRow.astro'
+import Horizontally from '@/components/grid/RowGrid'
 import ForkIcon2 from '../icon/ForkIcon2'
 
 ---
