Remove client directive in noninteractive Section component

--- a/src/pages/data/issue/index.astro
+++ b/src/pages/data/issue/index.astro
@@ -31,8 +31,8 @@ const additional = [
     <IssueContent slot="center" />
     <PriorityPanel slot="center" />
     
-    <IssueDetails slot="right" client:visible />
-    <ChatPanel slot="right" client:visible />
+    <IssueDetails slot="right" client:load />
+    <ChatPanel slot="right" client:load />
     <RecentActivity slot="right" />
     <RelatedIssues slot="right" />
 </V2Layout>
