--- a/src/pages/data/issue/post.astro
+++ b/src/pages/data/issue/post.astro
@@ -33,7 +33,7 @@ const additional = [
   }]} />
   <VotingSection slot="center" />
   <IssueDetails slot="right" />
-  <ChatPanel slot="right" client:visible />
+  <ChatPanel slot="right" client:load />
 </V2Layout>
 
 <style is:global>
