--- a/src/pages/login/callback.astro
+++ b/src/pages/login/callback.astro
@@ -14,5 +14,5 @@ const sectionInfo = {
 ---
 
 <V2Layout landingPageTopMenu={true} hideLinks={LandingRightMenu} cascadeLogoSubtitle="Wait a bit please...">
-        <Loading slot="center" client:visible {...sectionInfo} />
+        <Loading slot="center" client:load {...sectionInfo} />
 </V2Layout>
