--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -34,7 +34,7 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
           </div>
       </Card>
 
-  <CworkPanel slot="center" client:visible />
+  <CworkPanel slot="center" client:load />
   <Card slot="right" title="Dependencies Info">
         <div class="space-y-3">
           <div>
