--- a/src/pages/maintainer/marketing.astro
+++ b/src/pages/maintainer/marketing.astro
@@ -22,7 +22,7 @@ import InsightPanel from "@/components/maintainer/InsightPanel";
           contributors, CascadeFund gives you simple share tools to spread the word and onboard people.
         </p>
   </Card>
-  <MarketingAnalyticsPanel slot="center" client:visible />
+  <MarketingAnalyticsPanel slot="center" client:load />
   <RowGrid slot="center" cols={2}>
     <CommentFeedback />
     <CallToAction />
