--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -1,9 +1,12 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
-import Header from '@/components/utilitified_decorations/Header'
-import Footer from '@/components/utilitified_decorations/Footer'
-import type { Navigation, NavigationName } from "@/components/utilitified_decorations/HeaderRight";
+import Header from "@/components/utilitified_decorations/Header.astro";
+import Footer from "@/components/utilitified_decorations/Footer.astro";
+import type {
+  Navigation,
+  NavigationName,
+} from "@/components/utilitified_decorations/HeaderRight";
 
 interface Props {
   cascadeLogoSubtitle?: string;
@@ -14,34 +17,36 @@ interface Props {
   hideLinks?: NavigationName[];
   replacement?: Navigation;
 }
-const { landingPageTopMenu, cascadeLogoSubtitle, additional, activeLink, hideLinks } = Astro.props;
-
+const {
+  landingPageTopMenu,
+  cascadeLogoSubtitle,
+  additional,
+  activeLink,
+  hideLinks,
+} = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>CascadeFund</title>
-		<ClientRouter />
-	</head>
-	<body class="min-h-screen bg-gray-200"></body>
-  <Header 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/cascadefund_logo.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>CascadeFund</title>
+    <ClientRouter />
+  </head>
+  <body class="min-h-screen bg-gray-200"></body><Header
     activeLink={activeLink}
-    landingPageTopMenu={landingPageTopMenu}  
+    landingPageTopMenu={landingPageTopMenu}
     cascadeLogoSubtitle={cascadeLogoSubtitle}
-    additional={additional}  
+    additional={additional}
     hideLinks={hideLinks}
   />
-    <slot />
+  <slot />
   <Footer />
-  	</body>
 </html>
 
-
 <style is:global>
-  @import '@chatscope/chat-ui-kit-styles/dist/default/styles.min.css';
+  @import "@chatscope/chat-ui-kit-styles/dist/default/styles.min.css";
 </style>
